<resources>
    <string name="app_name">Movies Kaleidoscope</string>
    <string name="error_message">An error has occurred. Please try again.</string>

    <!-- Content descriptions-->
    <string name="movie_poster_content_description">Movie poster</string>

    <string name="action_sortbypopularity">Most popular</string>
    <string name="action_sortbytoprated">Highest rated</string>
    <string name="action_sortbyfavourites">My Favourite</string>


    <string name="movie_duration">min</string>
    <string name="max_rating">/10</string>
    <string name="network_error">W00t, something failed</string>
    <string name="network_error_msg">Please check network connection and try again</string>
    <string name="error_dismiss_button">Dismiss</string>
    <string name="movie_poster">movie_poster</string>

    <string name="action_favorite">Favorite</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="reviews"><u>Reviews</u></string>
    <string name="review_placeholder">No reviews found !</string>
    <string name="no_favs">Uh oh, no favourites found!</string>
    <string name="action_share">Share trailer</string>

</resources>
