<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/movie_details_scrollview"
            android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.MovieDetailsActivity"
            android:contentDescription="@string/movie_poster_content_description"
            android:id="@+id/movie_details_layout">


        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:id="@+id/cardView"
                app:cardBackgroundColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="0dp"
        >
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/movie_poster_large"
                    android:contentDescription="@string/movie_poster"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:elevation="5dp"
            />
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:id="@+id/space_view"
            />
        </android.support.v7.widget.CardView>

        <ImageView

                android:layout_width="126dp"
                android:layout_height="162dp" tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:id="@+id/movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/movie_poster_content_description"
                app:layout_constraintTop_toBottomOf="@+id/cardView" android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:translationZ="5dp"
                android:elevation="2dp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="24dp"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster"
                app:layout_constraintBottom_toTopOf="@id/plot_synopsis"
                android:id="@+id/detail_divider"/>

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     app:layout_constraintStart_toEndOf="@id/movie_poster"
                     app:layout_constraintEnd_toStartOf="@id/movie_rating"
                     app:layout_constraintTop_toTopOf="@id/movie_rating"
                     app:layout_constraintBottom_toBottomOf="@id/movie_rating"
                     android:layout_margin="8dp"
                     android:id="@+id/rating_icon"
                     android:background="@drawable/baseline_grade"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_rating" android:layout_marginStart="68dp"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/movie_poster" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/release_year"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plot_synopsis" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_divider" android:layout_margin="16dp"
                app:layout_constraintBottom_toTopOf="@+id/trailer_detail_divider"/>


        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     app:layout_constraintStart_toEndOf="@id/movie_poster"
                     app:layout_constraintEnd_toStartOf="@id/release_year"
                     app:layout_constraintTop_toTopOf="@id/release_year"
                     app:layout_constraintBottom_toBottomOf="@id/release_year"
                     android:layout_margin="8dp"
                     android:id="@+id/release_icon"
                     android:background="@drawable/baseline_history"

        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/release_year" android:layout_marginTop="25dp"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/cardView" android:layout_marginStart="68dp"
                app:layout_constraintStart_toEndOf="@+id/movie_poster"/>

        <TextView
                android:id="@+id/tv_error_message_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/error_message"
                android:textSize="20sp"
                android:visibility="invisible" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cardView" android:layout_marginBottom="45dp"
                app:layout_constraintBottom_toTopOf="@+id/movie_poster"/>

        <ProgressBar
                android:id="@+id/pb_loading_indicator"
                android:layout_height="42dp"
                android:layout_width="42dp"
                android:layout_gravity="center"
                android:visibility="invisible" app:layout_constraintTop_toTopOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="24dp"
                app:layout_constraintTop_toBottomOf="@+id/plot_synopsis"
                android:id="@+id/trailer_detail_divider"
                app:layout_constraintBottom_toTopOf="@+id/recyclerview_trailer"/>


        <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:layout_margin="16dp"
                android:descendantFocusability="blocksDescendants"
                app:layout_constraintTop_toBottomOf="@+id/trailer_detail_divider"
                app:layout_constraintBottom_toTopOf="@id/reviews_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

        />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_margin="24dp"
                android:id="@+id/reviews_divider"
                app:layout_constraintTop_toBottomOf="@id/recyclerview_trailer"
                app:layout_constraintBottom_toTopOf="@+id/reviewText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/reviews_divider"
                  app:layout_constraintBottom_toTopOf="@id/reviewText"
                  android:layout_marginTop="16dp"
                  android:layout_marginBottom="16dp"
                  android:text="@string/reviews"
                  android:textStyle="bold"
        />

        <TextView
                tools:text="Movie review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reviewText"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/reviews_divider"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/review_placeholder"
                android:textStyle="normal|italic"

/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>
